# bolt-ecosystem

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.md  ROADMAP.md
.archive/agents-legacy/: daemon-runtime.md  docs-keeper.md  monorepo-boundaries.md  product-build.md  protocol-guardian.md  release-ops.md  rendezvous-infra.md  sdk-api-design.md  security-audit.md  sre-enforcer.md
.claude/agents/: AGENTS.md  auditor.md  coder.md  context-keeper.md  deployer.md  docs-keeper.md  ops-monitor.md  reporter.md  security-auditor.md  test-runner.md
bolt-cli/: Cargo.toml
bolt-cli/src/: main.rs
docs/: ADR-001-NATIVE-APP-ARCHITECTURE.md  AUDIT_TRACKER.md  BTR5_DECISION_MEMO.md  BTR5_EVIDENCE_INDEX.md  BTR_VECTOR_POLICY.md  CHANGELOG.md  DOC_ROUTING.md  FORWARD_BACKLOG.md  GOVERNANCE_WORKSTREAMS.md  LOCALBOLT_CORE_DRIFT_RUNBOOK.md  PROTOCOL_COMPLIANCE.md  PROTOCOL_ENFORCEMENT.md  README.md  ROADMAP.md  RUST_CORE_PLAN.md  SECURITY_MODEL.md  STATE.md
docs/AUDITS/: 2026-02-26-execution-bindings.md  2026-02-26-security-audit.md  2026-02-28-security-audit.md  2026-03-01-full-ecosystem-audit.md  2026-03-03-security-audit.md  2026-07-13-localbolt-security-audit.md
docs/archive/: HANDOFF_2026-05-16_QUIC.md  PIXEL_REBRAND_BRIEF.md  Phase-9E-synthesis.md  S2-prompt.md
docs/evidence/: ARCHITECTURE_AUDIT_2026-03-23.md  BR1_EVIDENCE.md  BR2_EVIDENCE.md  BR3_EVIDENCE.md  BR4_EVIDENCE.md  BR5_EVIDENCE.md  BR6_EVIDENCE.md  BS1_EVIDENCE.md  BS2_EVIDENCE.md  BS3_EVIDENCE.md  BS4_EVIDENCE.md  BS5_EVIDENCE.md  BTR_RUNTIME_VERIFICATION_EVIDENCE.md  DM1_EVIDENCE.md  (+68 more)
os/: NOW.md
(+20 files in other folders)
