[package]
name = "bolt-cli"
version = "0.1.0"
edition = "2021"
description = "Non-core CLI consumer for bolt-daemon IPC — ecosystem adoption validation"

# NONCORE-ADOPTER-1: This crate deliberately does NOT depend on bolt-daemon
# or bolt-core. All IPC types are independently defined from IPC_CONTRACT.md.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
